--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,7 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.example.mobilerehab">
-
     <!--
          The ACCESS_COARSE/FINE_LOCATION permissions are not required to use
          Google Maps Android API v2, but you must specify either coarse or fine
@@ -21,7 +20,7 @@
         android:supportsRtl="true"
         android:theme="@style/AppTheme"
         android:usesCleartextTraffic="true">
-
+        <activity android:name=".DoctorViewPatient"></activity>
         <!--
              The API key for Google Maps-based APIs is defined as a string resource.
              (See the file "res/values/google_maps_api.xml").
@@ -33,23 +32,22 @@
         <meta-data
             android:name="com.google.android.geo.API_KEY"
             android:value="@string/google_maps_key" />
-
         <meta-data
             android:name="com.google.android.gms.vision.DEPENDENCIES"
             android:value="barcode" />
 
         <activity
             android:name=".MapsActivity"
-            android:label="@string/title_activity_maps"></activity>
+            android:label="@string/title_activity_maps" />
         <activity android:name=".PatientSchedule" />
         <activity android:name=".PatientProfile" />
         <activity android:name=".PatientHome" />
         <activity android:name=".ScheduleInfo" />
         <activity android:name=".Schedule" />
-        <activity android:name=".CreateAppointment" />
+        <activity android:name=".AddAppointment" />
         <activity android:name=".QrGenerate" />
         <activity android:name=".QrScanner" />
-        <activity android:name=".Signup" />
+        <activity android:name=".AddPatient" />
         <activity android:name=".DoctorHome" />
         <activity android:name=".Login">
             <intent-filter>
@@ -58,7 +56,6 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-
     </application>
 
 </manifest>
