--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -18,9 +18,10 @@
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
-        android:theme="@style/AppTheme"
+        android:theme="@style/Theme.Design.Light.NoActionBar"
         android:usesCleartextTraffic="true">
-        <activity android:name=".DoctorViewPatient"></activity>
+
+        <activity android:name=".ViewPatient" />
         <!--
              The API key for Google Maps-based APIs is defined as a string resource.
              (See the file "res/values/google_maps_api.xml").
@@ -39,6 +40,7 @@
         <activity
             android:name=".MapsActivity"
             android:label="@string/title_activity_maps" />
+        <activity android:name=".Login"></activity>
         <activity android:name=".PatientSchedule" />
         <activity android:name=".PatientProfile" />
         <activity android:name=".PatientHome" />
@@ -49,7 +51,7 @@
         <activity android:name=".QrScanner" />
         <activity android:name=".AddPatient" />
         <activity android:name=".DoctorHome" />
-        <activity android:name=".Login">
+        <activity android:name=".SplashScreen">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
