--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -20,7 +20,7 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.Design.Light.NoActionBar"
         android:usesCleartextTraffic="true">
-
+        <activity android:name=".ViewAppointment"></activity>
         <activity android:name=".ViewPatient" />
         <!--
              The API key for Google Maps-based APIs is defined as a string resource.
@@ -40,8 +40,7 @@
         <activity
             android:name=".MapsActivity"
             android:label="@string/title_activity_maps" />
-        <activity android:name=".Login"></activity>
-        <activity android:name=".PatientSchedule" />
+        <activity android:name=".Login" />
         <activity android:name=".PatientProfile" />
         <activity android:name=".PatientHome" />
         <activity android:name=".AppointmentDetails" />
