--- a/app/build.gradle
+++ b/app/build.gradle
@@ -33,5 +33,6 @@ dependencies {
     implementation 'com.android.support:design:28.0.0'
     implementation 'com.google.android.gms:play-services-vision:17.0.2'
     implementation 'com.google.code.gson:gson:2.8.2'
+    implementation 'com.journeyapps:zxing-android-embedded:3.4.0'
 
 }
