--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -11,6 +11,9 @@
     <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
     <uses-permission android:name="android.permission.INTERNET" />
     <uses-permission android:name="android.permission.VIBRATE" />
+    <uses-permission android:name="android.permission.CALL_PHONE" />
+    <uses-permission android:name="android.permission.READ_PHONE_STATE" />
+    <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
 
     <application
         android:allowBackup="true"
@@ -20,7 +23,12 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.Design.Light.NoActionBar"
         android:usesCleartextTraffic="true">
-        <activity android:name=".ViewAppointment"></activity>
+        <activity android:name=".PatientAppointmentDetails"></activity>
+        <activity android:name=".PatientViewAppointment" />
+        <activity
+            android:name=".EmergencyContacts"
+            android:exported="true" />
+        <activity android:name=".ViewAppointment" />
         <activity android:name=".ViewPatient" />
         <!--
              The API key for Google Maps-based APIs is defined as a string resource.
@@ -45,7 +53,6 @@
         <activity android:name=".PatientHome" />
         <activity android:name=".AppointmentDetails" />
         <activity android:name=".AddAppointment" />
-        <activity android:name=".QrGenerate" />
         <activity android:name=".QrScanner" />
         <activity android:name=".AddPatient" />
         <activity android:name=".DoctorHome" />
